# encode-metadata

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: annotation_manifests.py  report_parquets.py
output/: BPNet-model-annotations.manifest  BPNet-model-annotations.parquet  BPNet-model-annotations.tsv  BPNet-model.parquet  BPNet-model.tsv  ChromBPNet-model-annotations.parquet  ChromBPNet-model-annotations.tsv  ChromBPNet-model.parquet  ChromBPNet-model.tsv
