[project]
name = "encode-metadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
]
